--- a/popup/popup.css
+++ b/popup/popup.css
@@ -32,7 +32,7 @@ body{
     width: 100%;
     height: 100%;
 }
-#reward-quantity{
+.reward-quantity{
     position: absolute;
     z-index: 4;
     bottom: 28px;
@@ -43,7 +43,7 @@ body{
     text-align: center;
     color: white;
 }
-#reward-day{
+.reward-day{
     position: absolute;
     z-index: 4;
     bottom: 5.33333px;
